--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:background="@color/light_grey"
         android:padding="10dp"
         android:textSize="48sp"
-
+        android:textColor="@color/black"
         android:gravity="end|bottom"
         />
     <LinearLayout
